Make the aop exception-safe
Signed-off-by: frank chen <frank.chen021@outlook.com>